--- a/JS/jeux_carte/.vscode/launch.json
+++ b/JS/jeux_carte/.vscode/launch.json
@@ -9,8 +9,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Lancer Chrome en utilisant localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
+            "file": "${workspaceFolder}/index.html"
         }
     ]
 }
